# sandbox

./: .gitignore  cppDirFileList.txt  main.cpp
Tutorial/Complete/MathFunctions/: mysqrt.h
apps/: README.md
apps/cpp/: .gitignore  README.md
apps/cpp/classer/: classerConfig.h.in
apps/cpp/classer/People/: Person.cpp  Person.h  Student.cpp
cpp/: CMakeLists.txt
cpp/apps/: CMakeLists.txt  apps.cpp
cpp/apps/Tutorial/: CMakeLists.txt  hellogoogle_test.cc
cpp/apps/Tutorial/MathFunctions/: MathFunctions.h
cpp/apps/classer/: CMakeLists.txt
cpp/apps/classer/MathFunctions/: CMakeLists.txt  MathFunctions.h
cpp/apps/classer/People/: Person.cpp
cpp/apps/helloWorld/: CMakeLists.txt  HelloWorldMainTest.cc
cpp/docs/: README.md
cpp/libs/: CMakeLists.txt  libs.cpp
cpp/libs/calculate/: CMakeLists.txt
cpp/libs/calculate/src/: CMakeLists.txt
cpp/libs/calculate/src/calculate/: CMakeLists.txt  add.cpp  calculateConfig.h.in  multiply.cpp  subtract.cpp
cpp/libs/calculate/src/calculate/include/calculate/: add.h  multiply.h  subtract.h
cpp/libs/calculate/tests/: CMakeLists.txt  add_test.cpp  calculate_test.cpp  multiply_test.cpp  subtract_test.cpp
software/cpp/: .gitignore  README.md  cppTests.cc
software/cpp/apps/: AppsMainTest.cc  CMakeLists.txt
software/cpp/apps/classer/: CMakeLists.txt  main.cpp
software/cpp/apps/classer/MathFunctions/: mysqrt.cxx  power.cxx
software/cpp/apps/classer/People/: CMakeLists.txt  People.h  Person.h  Student.h
software/cpp/tests/: CMakeLists.txt
software/cpp/tests/apps/: AppsMainTest.cc
software/cpp/tests/apps/classer/: CMakeLists.txt  classerTests.cc
